# fif

./: CMakeLists.txt
src/: CMakeLists.txt  configuration.cc  configuration.h  fif.cc  fif.h  main.cc  strings.h  utilities.cc  utilities.h
src/argsparser/: argsparser.cc  argsparser.h
src/colors/: colors.cc  colors.h
src/moduls/: fif.cc  fif.h  smb.cc  smb.h
src/os/: os.cc  os.h
